// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Test component 1`] = `
<div
  className="test"
>
  <MockComponent
    model={
      Object {
        "getComponentClass": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": "MockComponent",
            },
          ],
        },
      }
    }
    moduleData={
      Object {
        "focusState": Object {},
      }
    }
  />
  <div
    className="submit-button"
  >
    <div
      className="obojobo-draft--components--button is-not-dangerous align-center"
    >
      <button>
        Submit (Not all questions have been answered)
      </button>
    </div>
  </div>
</div>
`;

exports[`Test Test component fetching score 1`] = `
<div
  className="test"
>
  <MockComponent
    model={
      Object {
        "getComponentClass": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": "MockComponent",
            },
          ],
        },
      }
    }
    moduleData={
      Object {
        "focusState": Object {},
      }
    }
  />
  <div
    className="submit-button"
  >
    <div
      className="obojobo-draft--components--button is-not-dangerous align-center"
    >
      <button
        disabled={true}
      >
        Loading ...
      </button>
    </div>
  </div>
</div>
`;

exports[`Test Test component with completeAttempt 1`] = `
<div
  className="test"
>
  <MockComponent
    model={
      Object {
        "getComponentClass": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": "MockComponent",
            },
          ],
        },
      }
    }
    moduleData={
      Object {
        "focusState": Object {},
      }
    }
  />
  <div
    className="submit-button"
  >
    <div
      className="obojobo-draft--components--button is-not-dangerous align-center"
    >
      <button>
        Submit
      </button>
    </div>
  </div>
</div>
`;
